Fim do Projeto.

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
             </a>
         </section>
     </main>
+
+    <div class="final-credits">
+        <div>
+            <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.linkedin.com/in/guga-silva-124706233/" target="_blank">Guga Silva</a>.</p>
+        </div>
+    </div>
 </body>
 </html>
